--- a/style.css
+++ b/style.css
@@ -6,73 +6,65 @@
 .hero{
     height:100%;
     width: 100%;
-    background-image:url(back8.jpeg) ;
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(back8.jpeg) ;
     background-position: center;
     background-size:cover;
     position:absolute;
 }
-
 .form-box{
     width: 380px;
     height: 480px;
     position: relative;
     margin: 6% auto;
-    background: rgb(245, 241, 241);
+    background: #fff;
     padding: 5px;
     overflow:hidden;
 }
-
-.bottom-box{
-    width: 200px;
-    height: 15 px auto;
-    position: relative;
-    box-shadow: 0 0 20px 9px #4b5e9a1f;
-    border-radius: 30 px;
+.button-box{
+    width: 220px;
+    height: 35px auto ;
+    position:relative;
+    box-shadow: 0 0 20px 9px #0e0a081f;
+    border-radius: 30px;
 }
-
 .toggle-btn{
-    padding: 20px 60px;
+    padding: 10px 30px;
     cursor: pointer;
     background: transparent;
     border: 0;
     outline: none;
     position: relative;
 }
-
 #btn{
-top: 0;
-left: 0;
-position:absolute;
-width: 120px;
-height: 10%;
-background: linear-gradient(to right, #958bdf, #bab7d0);
-border-radius: 30px;
-transition: 0.5s;
+    top: 0;
+    left: 0;
+    position:absolute;
+    width: 110px;
+    height: 100%;
+    background: linear-gradient(to right, #958bdf, #bab7d0);
+    border-radius: 30px;
+    transition: .5s;
+ }
+ .social-icons{
+        margin: 40px auto;
+        text-align:center;
 }
-
-.social-icons{
-    margin: 40px auto;
-    text-align:center;
-}
-
 .social-icons img{
     width:80px;
     margin:0 12px;
     cursor: pointer ;
     border-radius:80%;
 }
-
 .input-group{
     top:180px;
     position: absolute;
-    width: 210px;
+    width: 280px;
     transition: .5s;
 }
-
 .input-field{
-    width: 150px;
+    width: 100%;
     padding: 10px 0;
-    margin: 0px 0;
+    margin: 5px 0;
     border-left: 0;
     border-top: 0;
     border-right: 0;
@@ -80,48 +72,29 @@ transition: 0.5s;
     outline: none;
     background: transparent;
 }
-
 .submit-btn{
-    width: 85%;
-    padding: 10px 40px;
-    cursor: pointer;
-    display: block;
-    margin: auto;
-    background: linear-gradient(to right, #9e85c3, #c2c1d4);
-    border: 0;
-    outline: none;
-    border-radius: 70px;
-
-}
-
-.submit-box{
     width: 85%;
     padding: 10px 30px;
     cursor: pointer;
     display: block;
     margin: auto;
-    background: linear-gradient(to right, #8010ff, #4806ff);
+    background: linear-gradient(to right, #958bdf, #bab7d0);
     border: 0;
     outline: none;
     border-radius: 30px;
 }
-
-.check-box{
-    margin: 10px 50px 50px 250; 
+.chech-box{
+    margin: 30px 10px 30px 0; 
 }
-
 span{
     color:#777;
     font-size: 12px;
-    bottom:85px;
+    bottom:68px;
     position: absolute;
-
 }
-
 #login{
-    left:80px;
+    left: 50px;
 }
-
 #register{
-    left:720px;
+    left: 450px;
 }
