--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     height: 480px;
     position: relative;
     margin: 6% auto;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.8);
     padding: 5px;
     overflow:hidden;
 }
@@ -24,6 +24,7 @@
     width: 220px;
     height: 35px auto ;
     position:relative;
+    margin: auto;
     box-shadow: 0 0 20px 9px #0e0a081f;
     border-radius: 30px;
 }
