--- a/Aplicatia/style.css
+++ b/Aplicatia/style.css
@@ -159,3 +159,100 @@ nav{
     text-decoration: none;
     color: #626262;
 }
+
+
+/*-----------------my-account-page---------------*/
+
+.profile-container{
+    padding: 20px 15%;
+    color: #626262;
+}
+.cover-img{
+    width: 100%;
+    height: 200px;
+    border-radius: 6px;
+    margin-bottom: 14px;
+}
+.profile-details{
+    background: #fff;
+    padding: 10px;
+    border-radius: 4px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.pd-row{
+    display: flex;
+    align-items: flex-start;
+}
+.pd-img{
+    width: 100px;
+    margin-right: 20px;
+    border-radius: 6px;
+}
+.pd-row div h3{
+    margin-top: 10px;
+    font-size: 25px;
+    font-weight: 600;
+}
+.pd-row div p{
+    font-size: 13px;
+    margin-top: 10px;
+}
+.post-input-container{
+    padding-left: 55px;
+    padding-top: 20px;
+}
+.write-post-container{
+    width: 80%;
+    background: #fff;
+    border-radius: 6px;
+    padding: 20px;
+    color: #626262;
+    margin-top: 20px;
+    margin-left: 70px;
+}
+.user-profileN{
+    display: flex;
+    align-items: center;
+}
+.user-profile-img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.user-profile p{
+ margin-bottom: -5px;
+ font-weight: 500;
+ color: #626262;   
+}
+.post-input-container{
+    padding-left: 55px;
+    padding-top: 20px;
+}
+.post-input-container textarea{
+    width: 100%;
+    border: 0;
+    outline: 0;
+    border-bottom: 1px solid #ccc;
+    background: transparent;
+    resize: none;
+}
+.add-post-links{
+    display: flex;
+    margin-top: 10px;
+}
+.add-post-links a{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    color: #626262;
+    margin-right: 30px;
+    font-size: 13px;
+}
+.add-post-links a img{
+    width: 20px;
+    margin-right: 10px;
+    margin-left: 60px;
+}
