--- a/homeStyle.css
+++ b/homeStyle.css
@@ -1,63 +1,111 @@
 @import url(https://fonts.googleapis.com/css?family=Merienda);
 
 body{
-    background-image: linear-gradient(to right, #efefef, #1876f2);
+    background-image: linear-gradient(to right, rgba(149, 139, 223, 1), rgba(186, 183, 208,1));
+    /*background-color: rgb(149, 139, 223);*/
+    font-family: "Merienda", "sans";
    
 }
 
-.header{
-   text-align: center;
+header{
+    /*background-color:rgba(186, 183, 208, 1);*/
 }
 
-.header > img{
-    opacity: 0.8;
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: -10px;
+header::after{
+    content:'';
+    display: table;
+    clear: both;
 }
 
-.main{
-    float:left;
+.container{
+    width: 80%;
+    margin: auto;
+}
+
+header img{
+    margin-left: 2%;
+}
+
+.logo{
+    float: left;
+    padding: auto;
+}
+
+header nav{
+    margin-right: 0px;
+    float:right;
+}
+
+nav ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+nav li{
+    display: inline-block;
+    margin-left: 20px;
+    padding-top: 25px;
+
+    position: relative;
+}
+
+nav > ul > li > a{
+    color:black;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 18px;
+}
+
+nav a:hover{
+    font-size: 20px;
+    color:#efefef;
+
+}
+
+nav ul li::after{
+    content: '';
+    display: block;
+    height: 5px;
+    /*width: 100%;*/
+    background-color: #efefef;
+    /*position: absolute;*/
+    width: 0%;
+    margin: auto;
+    transition-duration: 0.5s;
+}
+
+nav ul li:hover::after{
     width: 100%;
 }
 
-.main > h1{
+
+.main-content{
+    float:left;
+    margin-top: 10px;
+    width: 100%;
+}
+
+.main-content h1{
     text-align: center;
     color: rgb(0, 0, 0);
-    font-family: "Merienda", "sans";
     font-size: 80px;
 }
 
-.main > p{
+.main-content p{
     text-align: center;
-    font-family: "Merienda", "sans";
     font-size: 20px;
 }
 
-button{
+.main-content img{
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 40px;
-    margin-bottom: 50px;;
-    border-radius : 10px;
-    background-color: #553d67;
-    text-align: center;
-    font-size:15px;
+    margin: auto;
 }
 
-button:hover{
-    border-radius : 15px;
-    background-color: #99738E;
-    font-size:20px;
-}
-   
 .footer{
     text-align: center;   
-    /*margin: 100px 100px; */
 }
 
-/*.footer > footer{
-    
-}*/
+.footer footer{
+    margin-top: 15px;
+}
