--- a/stylepg.css
+++ b/stylepg.css
@@ -10,7 +10,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #1876f2;
+    background:  linear-gradient(to right, #958bdf, #bab7d0);
     padding: 5px 5%;
     position: sticky;
     top: 0;
@@ -66,7 +66,7 @@ nav{
     
 }
 .left-sidebar{
-    background: #cbdffa;
+    background: #ddd9f7;
     flex-basis: 20%;
     position: sticky;
     top: 70px;
