--- a/homeStyle.css
+++ b/homeStyle.css
@@ -9,6 +9,7 @@ body{
 
 header{
     /*background-color:rgba(186, 183, 208, 1);*/
+    font-size: 1.4vw;
 }
 
 header::after{
@@ -18,17 +19,20 @@ header::after{
 }
 
 .container{
-    width: 80%;
+    width: 95%;
+    /*font-size: 2vw;*/
     margin: auto;
 }
 
 header img{
+    margin-top: auto;
     margin-left: 2%;
 }
 
 .logo{
     float: left;
-    padding: auto;
+    margin-top: 0;
+    /*padding: auto;*/
 }
 
 header nav{
@@ -45,7 +49,7 @@ nav ul{
 nav li{
     display: inline-block;
     margin-left: 20px;
-    padding-top: 25px;
+    /*padding-top: 25px;*/
 
     position: relative;
 }
@@ -54,7 +58,7 @@ nav > ul > li > a{
     color:black;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 18px;
+    font-size: 1.4vw;
 }
 
 nav a:hover{
@@ -82,30 +86,32 @@ nav ul li:hover::after{
 
 .main-content{
     float:left;
-    margin-top: 10px;
+    /*margin-top: 10px;*/
     width: 100%;
 }
 
 .main-content h1{
     text-align: center;
     color: rgb(0, 0, 0);
-    font-size: 80px;
+    font-size: 5.8vw;
 }
 
 .main-content p{
     text-align: center;
-    font-size: 20px;
+    font-size:1.7vw;
 }
 
 .main-content img{
     display: block;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .footer{
-    text-align: center;   
+    text-align: center;
+    font-size: 1.15vw;
 }
 
 .footer footer{
-    margin-top: 15px;
+    /*margin-top: 15px;*/
 }
