--- a/MyAccount/styleMyAccount.css
+++ b/MyAccount/styleMyAccount.css
@@ -2,9 +2,11 @@
     margin: 0;
     padding: 0;
     font-family: 'poppins',sans-serif;
+    box-sizing: border-box;
 }
 body{
     background: #efefef ;
+    font-family: "Raleway",sans-serif;
 }
 nav{
     display: flex;
@@ -256,4 +258,102 @@ nav{
     width: 20px;
     margin-right: auto;
     margin-left: auto;
+}
+
+/* css pentru popup formul de adaugare a unei poze */
+
+.center{
+    position:absolute;
+    top:63%;
+    left:29.3%;
+    transform:translate(-70%,-50%);
+}
+
+.center button{
+    padding: 10px 20px;
+    font-size:15px;
+    font-weight: 600;
+    color:#222;
+    background: #f5f5f5;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.popup{
+position: absolute;
+top:-70%;
+left:50%;
+opacity: 0; 
+transform: translate(-70%,-50%) scale(1.25);
+width:380px;
+padding: 20px 30px;
+background: #958bdf;
+box-shadow: 2px 2px 5px 5px rgba(205, 173, 173, 0.15);
+border-radius: 10px;
+transition: top 0ms ease-in-out 200ms,
+            opacity 200ms ease-in-out 0ms,
+            transform 200ms ease-in-out 0ms;
+}
+
+.popup.active{
+    top:70%;
+    opacity: 1;
+    transform: translate(-50%,-50%) scale(1);
+    transition: top 0ms ease-in-out 0ms,
+            opacity 200ms ease-in-out 0ms,
+            transform 200ms ease-in-out 0ms;
+}
+
+.popup .close-btn{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 15px;
+    height: 15px;
+    background: #888;
+    text-align: center;
+    line-height: 15px;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+.popup .form h2 {
+    text-align: center;
+    color: #222;
+    margin: 16px 0px 20px;
+    font-size: 25px;
+}
+
+.popup .form .form-element {
+    margin: 15px 0px;
+}
+
+.popup .form .form-element label {
+    font-size: 14px;
+    color:#222;
+}
+
+.popup .form .form-element input[type="text"] {
+    margin-top: 5px;
+    display: blocks;
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid #aaa;
+
+}
+
+.popup .form .form-element button {
+width: 100%;
+height: 40px;
+border: none;
+outline: none;
+font-size: 15px;
+background: #222;
+color: #f5f5f5;
+border-radius: 10px;
+cursor: pointer;
 }
