--- a/MyAccount/styleMyAccount.css
+++ b/MyAccount/styleMyAccount.css
@@ -316,7 +316,7 @@ transition: top 0ms ease-in-out 200ms,
     text-align: center;
     line-height: 15px;
     border-radius: 15px;
-    cursor: pointer;
+    cursor: pointer; 
 }
 
 .popup .form h2 {
@@ -357,3 +357,39 @@ color: #f5f5f5;
 border-radius: 10px;
 cursor: pointer;
 }
+
+/*------------------ postare ------------------*/
+
+.post-img{
+    width: 60%;
+    border-radius: 20px;
+   margin-top: 10px;
+}
+
+.user-profile span{
+    font-size: 10px;
+    color: #9a9a9a;
+}
+
+.post-popup{
+    width: 55%;
+    background: #fff;
+    border-radius: 5px;
+    position: absolute;
+    left: 70%;
+    transform: translate(-90%, -20%);
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #333; 
+    visibility: hidden;
+    transition: transform 0.4s, top 0.4s;
+}
+
+.open-details{
+    visibility: visible; 
+    top: 100%;
+    left: 70%;
+    transform: translate(-90%, -20%) scale(1);
+}
+
+
