--- a/MyAccount/styleMyAccount.css
+++ b/MyAccount/styleMyAccount.css
@@ -361,7 +361,7 @@ cursor: pointer;
 /*------------------ postare ------------------*/
 
 .post-img{
-    width: 60%;
+    width: 100%;
     border-radius: 20px;
    margin-top: 10px;
 }
@@ -383,6 +383,28 @@ cursor: pointer;
     color: #333; 
     visibility: hidden;
     transition: transform 0.4s, top 0.4s;
+}
+
+.post-popup h3 {
+    text-align: center;
+    color: rgb(8, 8, 8);
+    margin: 16px 0px 20px;
+    font-style: italic;
+    font-size: 25px;
+}
+
+.post-popup h2{
+    text-align:start;
+    color: rgb(52, 51, 51);
+    margin: 16px 0px 20px;
+    font-size: 15px;
+}
+.post-popup p{
+    text-align: start;
+    color: rgba(61, 57, 57, 0.616);
+    margin: 16px 0px 20px;
+    font-size: 15px;
+
 }
 
 .open-details{
