--- a/Main/styleMain.css
+++ b/Main/styleMain.css
@@ -82,6 +82,7 @@ nav{
 }
 .main-content{
     top:70px;
+
     flex-basis: 47%;
 }
 
@@ -409,3 +410,22 @@ nav{
   .select_wrap .select_ul li .option.active .text{
     color: var(--primary-clr);
   }
+
+  /* ---------------right-sidebar-ranking------------- */
+
+  .right-sidebar h3{
+    margin-top: 10px;
+  }
+  
+  .button {
+    border:2px solid #000;
+    margin-top: 5px;
+    margin-left: 20px;
+    background-color:#eee;
+    padding: 12px 20px;
+    font-size: 15px;
+    cursor: pointer;
+    display: inline-block;
+  }
+  .button:hover {background: #ddd9f7;}
+  
