--- a/MyAccount/styleMyAccount.css
+++ b/MyAccount/styleMyAccount.css
@@ -370,6 +370,10 @@ cursor: pointer;
 
 /*------------------ postare ------------------*/
 
+.div_item{
+    display: flex;
+}
+
 .autographs{
     display: inline-flex;
 }
