--- a/MyAccount/styleMyAccount.css
+++ b/MyAccount/styleMyAccount.css
@@ -358,7 +358,7 @@ transition: top 0ms ease-in-out 200ms,
 
 .popup .form .form-element button{
 width: 100%;
-height: 10px;
+height: 25px;
 border: none;
 outline: none;
 font-size: 15px;
@@ -438,6 +438,45 @@ cursor: pointer;
     top: 100%;
     left: 70%;
     transform: translate(-90%, -20%) scale(1);
+}
+
+
+select
+{
+  background-color: #fff;
+  border: 1px solid #ccc;
+  line-height: 30px;
+  display: inline-block;
+  height: 20px;
+  padding: 4px 6px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 20px;
+  color: #555;
+  vertical-align: middle;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+
+/* specific customizations for the data-list */
+div.data-list-input
+{
+	position: relative;
+	height: 30px;
+	margin-bottom: 10px;
+	display: inline-flex;
+	padding: 5px 0 5px 0;
+    width:190px;
+}
+select.data-list-input
+{
+	position: absolute;
+    width:190px;
+	top: 5px;
+	left: 0px;
+	height: 35px;
+	margin-bottom: 0;
 }
 
 
