--- a/Main/styleRanking.css
+++ b/Main/styleRanking.css
@@ -16,3 +16,19 @@
   display: inline-block;
 }
 .button:hover {background: #ddd9f7;}
+
+/* ---------------main content table raport------------ */
+table {
+  border-collapse: collapse;
+  width: 100%;
+  color: #676767;
+  font-family: monospace;
+  font-size: 20px;
+  text-align: center;
+  position:relative;
+  }
+  th {
+  background-color: #2c2c2c;
+  color: white;
+  }
+  tr:nth-child(even) {background-color: #f2f2f2}
