--- a/Main/styleMain.css
+++ b/Main/styleMain.css
@@ -6,19 +6,20 @@
 body{
     background: #efefef ;
 }
+
 nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
     background:  linear-gradient(to right, #958bdf, #bab7d0);
-    padding: 5px 5%;
+    padding: 5px;
     position: sticky;
     top: 0;
-    z-index: 100;
+    /*z-index: 100;*/
 }
 .logo{
-    width: 80px;
-    margin-right: 25px;
+    width: 75px;
+    /*margin-right: 25px;*/
 }
 .nav-left, .nav-right{
     display: flex;
@@ -44,7 +45,7 @@ nav{
 .search-box{
     background: #efefef;
     width: 350px;
-    border-radius: 20px;
+    border-radius: 50px;
     display: flex;
     align-items: center;
     padding: 0 15px;
@@ -62,16 +63,15 @@ nav{
 }
 .container {
     display: flex; 
-    justify-content: space-between;
-    padding: 13px 5px;
-    
+    justify-content:flex-start;
+    padding: 5px 5px; 
 }
 .left-sidebar{
     background: #ddd9f7;
-    flex-basis: 20%;
+    flex-basis: 200px;
     position: sticky;
     top: 70px;
-    align-self: flex-start;
+    align-self:flex-start;
 }
 .right-sidebar{
    
@@ -82,8 +82,8 @@ nav{
 }
 .main-content{
     top:70px;
-
-    flex-basis: 47%;
+    flex-basis: 50%;
+    padding-left: 15%;
 }
 
 .imp-links a{
@@ -101,9 +101,8 @@ nav{
     margin-left: 30px;
 }
 
-
 .settings-menu{
-   position: absolute;
+    position: absolute;
     width: 90%;
     max-width: 300px;
     height: 300px;
@@ -121,7 +120,7 @@ nav{
 .user-profile{
     display: flex;
     align-items: center;
-    margin: 15px 10;
+    margin: 15px 10px;
 }
 .seeAcount-icon{
     align-items: center;
@@ -147,7 +146,7 @@ nav{
 .settings-links{
     display: flex;
     align-items: center;
-    margin: 15px 10;
+    margin: 15px 10px;
 }
 .logout-icon{
    width: 38px;
@@ -162,6 +161,40 @@ nav{
     color: #626262;
 }
 
+@media only screen and (max-width: 800px) {
+    /* For mobile phones: */
+    .search-box {
+      width: 200px;
+    }
+    .imp-links a img{
+        width: 35px;
+        margin-right: 15px;
+        margin-left: 30px;
+    }
+}
+
+@media only screen and (max-width: 620px) {
+    .search-box {
+        width: 120px;
+      }
+    .left-sidebar{
+        display: none;
+    }   
+    .settings-menu{
+        width: 70%;
+        max-width: 200px;
+    }
+    .settings-menu-height{
+        max-height: 150px;
+    }
+    .seeAcount-icon{
+        width: 25px;
+       /* margin-right: 15px;*/
+    }
+    .logout-icon{
+        width: 28px;
+     }
+}
 
 /*-----------------my-account-page---------------*/
 
@@ -204,30 +237,6 @@ nav{
 .post-input-container{
     padding-left: 55px;
     padding-top: 20px;
-}
-.write-post-container{
-    width: 80%;
-    background: #fff;
-    border-radius: 6px;
-    padding: 20px;
-    color: #626262;
-    margin-top: 20px;
-    margin-left: 70px;
-}
-.user-profileN{
-    display: flex;
-    align-items: center;
-}
-.user-profile-img{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-.user-profile p{
- margin-bottom: -5px;
- font-weight: 500;
- color: #626262;   
 }
 .post-input-container{
     padding-left: 55px;
@@ -429,3 +438,85 @@ nav{
   }
   .button:hover {background: #ddd9f7;}
   
+  /* postare */
+
+.write-post-container{
+    /*width: 100%;*/
+    min-width: 50px;
+    width: 120%;
+    height: 400px;
+    display: block; 
+    background: #fff;
+    border-radius: 6px;
+    padding-bottom: 20px;
+    color: #626262;
+    margin-top: 20px;
+    margin-right: 25%;
+}
+.user-profile{
+    display: flex;
+    padding-top: 2%;
+    padding-left: 1%;
+    align-items: center;
+}
+.user-profile-img{
+    width: 8%;
+    height: 8%;
+    border-radius: 50%;
+    margin-right: 20px;
+    margin-top: 10px;
+}
+.user-profile p{
+ margin-bottom: -5px;
+ font-weight: 500;
+ font-size: 100%;
+ color: #626262;   
+}
+
+.div_item{
+    display: flex;
+}
+
+#autographs{
+    text-align: center;
+    display: block;
+}
+
+.post-img{
+    max-width: 80%;
+    width: 80%;
+    height: 65%;
+    border-radius: 20px;
+    margin-top: 25px;
+    margin-left: 5%;
+}
+
+@media only screen and (max-width: 620px) {
+    #autographs{
+        text-align: center;
+        margin: 0 auto;
+    }
+        
+    .user-profile-img{
+        width: 15%;
+        height: 15%;
+        border-radius: 50%;
+        margin-right: 20px;
+        margin-top: 10px;
+    }
+    .nav-left{
+        display: none;
+    }
+    .container {
+        display: inline-block; 
+        /*justify-content:flex-start;*/
+        padding: 5px 30px 5px 5px; 
+    }
+    
+    .write-post-container{
+        /*width: 100%;*/
+        min-width: 50px;
+        width: 100%;
+        height: 300px;
+    }
+}
