--- a/MyAccount/styleMyAccount.css
+++ b/MyAccount/styleMyAccount.css
@@ -26,7 +26,6 @@ nav{
     align-items: center;
 }
 
-
 .nav-left ul li{
     list-style: none;
     display: inline-block;
@@ -61,45 +60,11 @@ nav{
     outline: none;
     border: 0;
 }
-.container {
-    display: flex; 
-    justify-content:flex-start;
-    padding: 5px 5px; 
-}
-.left-sidebar{
-    background: #ddd9f7;
-    flex-basis: 200px;
-    position: sticky;
-    top: 70px;
-    align-self:flex-start;
-}
-.right-sidebar{
-   
-    flex-basis: 25%;
-    position: sticky;
-    top: 70px; 
-    align-self: flex-start;
-}
+
 .main-content{
-    top:70px;
-    flex-basis: 80%;
-    padding-left: 15%;
+    flex-basis: 47%;
 }
 
-.imp-links a{
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    color: #626262;
-    width: fit-content;
-    margin-top: 20px;
-}
-.imp-links a img{
-    width: 40px;
-    margin-right:15px ;
-    margin-left: 30px;
-}
 
 .settings-menu{
     position: absolute;
@@ -212,25 +177,13 @@ nav{
     .nav-left{
         display: none;
     }
-    .container {
-        display: inline-block; 
-        /*justify-content:flex-start;*/
-        padding: 5px 30px 5px 5px; 
-    }
-    
-    .write-post-container{
-        /*width: 100%;*/
-        min-width: 50px;
-        width: 100%;
-        height: 300px;
-    }
 }
 
 
 /*-----------------my-account-page---------------*/
 
 .profile-container{
-    padding: 20px 45px;
+    padding: 20px 10%;
     color: #626262;
 }
 .cover-img{
@@ -431,249 +384,4 @@ color: #f5f5f5;
 border-radius: 10px;
 cursor: pointer;
 }
-
-/*------------------ postare ------------------*/
-
-.post-img{
-    width: 95%;
-    height: 90%;
-    border-radius: 20px;
-    margin-top: 10px;
-}
-
-.write-post-container{
-    /*width: 100%;*/
-    min-width: 50px;
-    width: 400px;
-    height: 300px;
-    /*display: inline-flex;*/
-    background: #fff;
-    border-radius: 6px;
-    padding-bottom: 20px;
-    color: #626262;
-    margin-top: 20px;
-    margin-right: 25%;
-}
-
-.div_item{
-    display: flex;
-}
-
-#autographs{
-    /*text-align: center;*/
-    display:flex;
-    /*justify-content: flex-start;*/
-}
-
-.post-img{
-    width: 95%;
-    height: 90%;
-    border-radius: 20px;
-    margin-top: 10px;
-    margin-left: 5%;
-}
-
-@media only screen and (max-width: 620px) {
-    #autographs{
-        text-align: center;
-        margin: 0 auto;
-    }
-    .write-post-container{
-        /*width: 100%;*/
-        min-width: 50px;
-        width: 100%;
-        height: 300px;
-    }
-}
-
-.div_item{
-    display: flex;
-}
-
-/*
-.autographs{
-    display: inline-flex;
-}*/
-/*
-.write-post-container{
-    width: 400px;
-    height: 300px;
-    display: inline-flex;
-}
-
-.post-img{
-    width: 95%;
-    height: 90%;
-    border-radius: 20px;
-    margin-top: 10px;
-}
-
-.user-profile span{
-    font-size: 10px;
-    color: #9a9a9a;
-}*/
-/*
-.post-popup{
-    width: 55%;
-    background: rgb(221, 149, 149);
-    border-radius: 5px;
-    position: sticky;
-    left: 70%;
-    transform: translate(-90%, -20%);
-    text-align: center;
-    padding: 0 30px 30px;
-    color: #333; 
-    visibility: hidden;
-    transition: transform 0.4s, top 0.4s;
-}
-
-.post-popup h3 {
-    text-align: center;
-    color: rgb(8, 8, 8);
-    margin: 16px 0px 20px;
-    font-style: italic;
-    font-size: 25px;
-}
-
-.post-popup h2{
-    text-align:start;
-    color: rgb(52, 51, 51);
-    margin: 16px 0px 20px;
-    font-size: 15px;
-}
-.post-popup p{
-    text-align: start;
-    color: rgba(61, 57, 57, 0.616);
-    margin: 16px 0px 20px;
-    font-size: 15px;
-
-}
-
-.open-details{
-    visibility: visible; 
-    top: 100%;
-    left: 70%;
-    transform: translate(-90%, -20%) scale(1);
-}
-
-
-select
-{
-  background-color: #fff;
-  border: 1px solid #ccc;
-  line-height: 30px;
-  display: inline-block;
-  height: 20px;
-  padding: 4px 6px;
-  margin-bottom: 10px;
-  font-size: 14px;
-  line-height: 20px;
-  color: #555;
-  vertical-align: middle;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-}
-
-/* specific customizations for the data-list 
-div.data-list-input
-{
-	position: relative;
-	height: 30px;
-	margin-bottom: 10px;
-	display: inline-flex;
-	padding: 5px 0 5px 0;
-    width:190px;
-}
-select.data-list-input
-{
-	position: absolute;
-    width:190px;
-	top: 5px;
-	left: 0px;
-	height: 35px;
-	margin-bottom: 0;
-}
-
-/* afisare detalii autografe */
-
-.autograf-modal{
-    background-color: #f4f4f4;
-    margin: 20% auto;
-    padding: 20px;
-    width: 30%;
-    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2),0 7px 20px 0 rgba(0,0,0,0.2);
-    animation-name: modalopen;
-    animation-duration: 2s;
-  } 
-  
-  @keyframes modalopen {
-      from {opacity: 0}
-      to{opacity: 1}
-  }
-  
-  .close-Btn{
-      background:#ccc;
-      float: right;
-      align-items: right;
-      font-size: 15px;
-  }
-  
-  .close-Btn:hover,.close-Btn:focus{
-      color:#000;
-      text-decoration: none;
-      cursor: pointer;
-  }
-  
-  .details{
-      text-align:central;
-      background: #857eb9;
-      font-family: Papyrus ; 
-      color: rgb(5, 6, 5);
-      font-size: 25px;
-  }
-  
-  
-  .div_item{
-     background:#857eb9;
-     font-size: large;
-  }
-  
-  .div_item h2{
-      font-size: large;
-      font-family: Copperplate;
-  }
-  
-  .div_item p{
-      font-family: Papyrus ; 
-  }
-  /* done design detalii autografe */
-  
-  
-  /* poza de profil */
-  
-  
-  
-  #file{
-      display:none;
-  }
-  
-  #uploadBtn{
-      bottom: 0;
-      left: 10%;
-      background: rgba(0, 0, 0, 0.7);
-      color: wheat;
-      text-align:center;
-      font-size: 15px;
-      font-family: sans-serif;
-      transform: translateX(-50%);
-      cursor: pointer;
-      /* display: none; */
-    
-  }
-  
-  .changePhoto{
-      overflow:hidden;
-  } 
-
 
