--- a/MyAccount/styleMyAccount.css
+++ b/MyAccount/styleMyAccount.css
@@ -1,47 +1,53 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    font-family: 'poppins',sans-serif;
-}
-body{
-    background: #efefef ;
+    font-family: 'poppins', sans-serif;
 }
 
-nav{
+body {
+    background: #efefef;
+}
+
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background:  linear-gradient(to right, #958bdf, #bab7d0);
-    padding: 5px;
+    background: linear-gradient(to right, #958bdf, #bab7d0);
+    padding: 5px 5%;
     position: sticky;
     top: 0;
-    /*z-index: 100;*/
+    z-index: 100;
 }
-.logo{
+
+.logo {
     width: 75px;
-    /*margin-right: 25px;*/
+    margin-right: 25px;
 }
-.nav-left, .nav-right{
+
+.nav-left,
+.nav-right {
     display: flex;
     align-items: center;
 }
 
-.nav-left ul li{
+.nav-left ul li {
     list-style: none;
     display: inline-block;
 }
-.nav-left ul li img{
+
+.nav-left ul li img {
     width: 20px;
     margin: 0 10px;
     height: 20px;
 }
 
-.nav-user-icon img{
+.nav-user-icon img {
     width: 40px;
     border-radius: 50%;
     cursor: pointer;
 }
-.search-box{
+
+.search-box {
     background: #efefef;
     width: 350px;
     border-radius: 50px;
@@ -50,10 +56,12 @@ nav{
     padding: 0 15px;
     margin-right: 30px;
 }
-.search-box img{
+
+.search-box img {
     width: 18px;
 }
-.search-box input{
+
+.search-box input {
     width: 100%;
     background: transparent;
     padding: 10px;
@@ -61,12 +69,7 @@ nav{
     border: 0;
 }
 
-.main-content{
-    flex-basis: 47%;
-}
-
-
-.settings-menu{
+.settings-menu {
     position: absolute;
     width: 90%;
     max-width: 300px;
@@ -79,45 +82,34 @@ nav{
     max-height: 0;
     transition: max-height 0.3s;
 }
-.settings-menu-height{
+
+.settings-menu-height {
     max-height: 300px;
 }
-.user-profile{
-    display: flex;
-    align-items: center;
-    margin: 15px 10px;
-}
-.seeAcount-icon{
-    align-items: center;
-    width: 35px;
-    margin-right: 15px;
-}
 
-.user-profile a{
-    text-decoration: none;
-    font-size: 20px;
-    color:cornflowerblue;
-}
-
-.settings-menu-inner{
+.settings-menu-inner {
     padding: 20px;
 }
-.settings-menu hr{
+
+.settings-menu hr {
     border: 0;
     height: 1px;
     background: #9a9a9a;
     margin: 15px 0;
 }
-.settings-links{
+
+.settings-links {
     display: flex;
     align-items: center;
-    margin: 15px 10px;
+    margin: 15px 10;
 }
-.logout-icon{
-   width: 38px;
-   margin-right: 15px;
+
+.logout-icon {
+    width: 38px;
+    margin-right: 15px;
 }
-.settings-links a{
+
+.settings-links a {
     display: flex;
     flex: 1;
     align-items: center;
@@ -126,73 +118,22 @@ nav{
     color: #626262;
 }
 
-@media only screen and (max-width: 800px) {
-    /* For mobile phones: */
-    .search-box {
-      width: 200px;
-    }
-    .imp-links a img{
-        width: 35px;
-        margin-right: 15px;
-        margin-left: 30px;
-    }
-}
 
-@media only screen and (max-width: 620px) {
-    .search-box {
-        width: 120px;
-      }
-    .left-sidebar{
-        display: none;
-    }   
-    .settings-menu{
-        width: 70%;
-        max-width: 200px;
-    }
-    .settings-menu-height{
-        max-height: 150px;
-    }
-    .seeAcount-icon{
-        width: 25px;
-       /* margin-right: 15px;*/
-    }
-    .logout-icon{
-        width: 28px;
-     }
-}
+/*--my-account-page--*/
 
-@media only screen and (max-width: 620px) {
-    #autographs{
-        text-align: center;
-        margin: 0 auto;
-    }
-        
-    .user-profile-img{
-        width: 15%;
-        height: 15%;
-        border-radius: 50%;
-        margin-right: 20px;
-        margin-top: 10px;
-    }
-    .nav-left{
-        display: none;
-    }
-}
-
-
-/*-----------------my-account-page---------------*/
-
-.profile-container{
+.profile-container {
     padding: 20px 10%;
     color: #626262;
 }
-.cover-img{
+
+.cover-img {
     width: 100%;
     height: 200px;
     border-radius: 6px;
     margin-bottom: 14px;
 }
-.profile-details{
+
+.profile-details {
     background: #fff;
     padding: 10px;
     border-radius: 4px;
@@ -200,63 +141,46 @@ nav{
     align-items: flex-start;
     justify-content: space-between;
 }
-.pd-row{
+
+.pd-row {
     display: flex;
-    align-items: flex-start;
+    align-items: stretch;
+    align-content: flex-start;
 }
 
-.pd-right{
+.pd-right {
     display: flex;
     align-items: flex-end;
 }
 
-.pd-img{
+.pd-img {
     width: 100px;
     margin-right: 20px;
     border-radius: 6px;
 }
-.pd-row div h3{
+
+.pd-row div h3 {
     margin-top: 10px;
     font-size: 25px;
     font-weight: 600;
 }
-.pd-row div p{
+
+.pd-row div p {
     font-size: 13px;
     margin-top: 10px;
 }
-.post-input-container{
+
+.post-input-container {
     padding-left: 55px;
     padding-top: 20px;
 }
-.write-post-container{
-    width: 80%;
-    background: #fff;
-    border-radius: 6px;
-    padding: 20px;
-    color: #626262;
-    margin-top: 20px;
-    margin-left: 70px;
-}
-.user-profileN{
-    display: flex;
-    align-items: center;
-}
-.user-profile-img{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-.user-profile p{
- margin-bottom: -5px;
- font-weight: 500;
- color: #626262;   
-}
-.post-input-container{
+
+.post-input-container {
     padding-left: 55px;
     padding-top: 20px;
 }
-.post-input-container textarea{
+
+.post-input-container textarea {
     width: 100%;
     border: 0;
     outline: 0;
@@ -264,72 +188,64 @@ nav{
     background: transparent;
     resize: none;
 }
-.add-post-links{
-    display: flex;
-    margin-top: 10px;
-    margin-right: auto;
-}
-.add-post-links a{
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    color: #626262;
-    margin: auto;
-    font-size: 13px;
-}
-.add-post-links a img{
-    width: 20px;
-    margin-right: auto;
-    margin-left: auto;
+
+.pd-right ul {
+    list-style: none;
 }
 
-/* css pentru popup formul de adaugare a unei poze */
+.pd-right ul li {
+    padding: 5px;
+}
 
-/*.autograph-form{
-    position:absolute;
-    top:63%;
-    left:29.3%;
-    transform:translate(-70%,-50%);
-}*/
-
-#show-addAutograph{
+#show-addAutograph {
     padding: 10px 20px;
-    font-size:15px;
+    font-size: 15px;
     font-weight: 600;
-    color:#222;
-    background: #f5f5f5;
+    color: #222;
+    background: #c7c5c5e5;
     border: none;
     outline: none;
     cursor: pointer;
     border-radius: 5px;
 }
 
-.popup{
-position: absolute;
-top:-70%;
-left:50%;
-opacity: 0; 
-transform: translate(-70%,-50%) scale(1.25);
-width:450px;
-padding: 20px 30px;
-background: #958bdf;
-box-shadow: 2px 2px 5px 5px rgba(205, 173, 173, 0.15);
-border-radius: 10px;
-transition: top 0ms ease-in-out 200ms,
-            opacity 200ms ease-in-out 0ms,
-            transform 200ms ease-in-out 0ms;
+#show-exchange-dialog {
+    padding: 10px 20px;
+    font-size: 15px;
+    font-weight: 600;
+    color: #222;
+    background: #c7c5c5e5;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
-.popup.active{
-    top:70%;
+
+/* css pentru popup formul de adaugare a unei poze */
+
+.popup {
+    position: absolute;
+    top: -70%;
+    left: 50%;
+    opacity: 0;
+    transform: translate(-70%, -50%) scale(1.25);
+    width: 450px;
+    padding: 20px 30px;
+    background: #958bdf;
+    box-shadow: 2px 2px 5px 5px rgba(205, 173, 173, 0.15);
+    border-radius: 10px;
+    transition: top 0ms ease-in-out 200ms, opacity 200ms ease-in-out 0ms, transform 200ms ease-in-out 0ms;
+}
+
+.popup.active {
+    top: 70%;
     opacity: 1;
-    transform: translate(-50%,-50%) scale(1);
-    transition: top 0ms ease-in-out 0ms,
-            opacity 200ms ease-in-out 0ms,
-            transform 200ms ease-in-out 0ms;
+    transform: translate(-50%, -50%) scale(1);
+    transition: top 0ms ease-in-out 0ms, opacity 200ms ease-in-out 0ms, transform 200ms ease-in-out 0ms;
 }
 
-.popup .close-btn{
+.popup .close-btn {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -339,10 +255,10 @@ transition: top 0ms ease-in-out 200ms,
     text-align: center;
     line-height: 15px;
     border-radius: 15px;
-    cursor: pointer; 
+    cursor: pointer;
 }
 
-.row{
+.row {
     display: flex;
 }
 
@@ -359,7 +275,7 @@ transition: top 0ms ease-in-out 200ms,
 
 .popup .form .form-element label {
     font-size: 14px;
-    color:#222;
+    color: #222;
 }
 
 .popup .form .form-element input[type="text"] {
@@ -370,18 +286,102 @@ transition: top 0ms ease-in-out 200ms,
     outline: none;
     border-radius: 5px;
     border: 1px solid #aaa;
-
 }
 
-.popup .form .form-element button{
-width: 100%;
-height: 25px;
-border: none;
-outline: none;
-font-size: 15px;
-background: #222;
-color: #f5f5f5;
-border-radius: 10px;
-cursor: pointer;
+.popup .form .form-element button {
+    width: 100%;
+    height: 25px;
+    border: none;
+    outline: none;
+    font-size: 15px;
+    background: #222;
+    color: #f5f5f5;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
+.main-content {
+    display: inline-flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-left: 17%;
+    margin-right: 10%;
+}
+
+@media only screen and (max-width: 800px) {
+    /* For tablets: */
+    .search-box {
+        width: 200px;
+    }
+    .settings-menu {
+        width: 100%;
+        max-width: 180px;
+        height: 100px;
+    }
+    /*.settings-menu-height {
+        max-height: 10px;
+    }*/
+}
+
+@media only screen and (max-width: 620px) {
+    /* For mobile phones: */
+    .logo {
+        width: 40px;
+    }
+    .home {
+        display: none;
+    }
+    .search-box {
+        width: 40px;
+        height: 20px;
+    }
+    .search-box img {
+        width: 10px;
+        height: 10px;
+    }
+    .nav-user-icon img {
+        width: 30px;
+    }
+    .settings-menu {
+        width: 100%;
+        max-width: 130px;
+        height: 60px;
+    }
+    .settings-menu button {
+        font-size: 15px;
+    }
+    .logout-icon {
+        display: none;
+    }
+    .settings-menu-height {
+        max-height: 150px;
+    }
+    .seeAcount-icon {
+        width: 25px;
+        /* margin-right: 15px;*/
+    }
+    .logout-icon {
+        width: 28px;
+    }
+    #show-addAutograph {
+        font-size: 5px;
+        padding: 5px 10px;
+    }
+    #show-exchange-dialog {
+        font-size: 5px;
+        padding: 5px 10px;
+    }
+    .pd-img {
+        width: 30px;
+    }
+    .pd-row div h3 {
+        font-size: 80%;
+    }
+    .pd-row div p {
+        font-size: 2%;
+    }
+    .pd-right ul li {
+        padding: 2px;
+    }
+}
