--- a/MyAccount/feedAutographs.css
+++ b/MyAccount/feedAutographs.css
@@ -141,7 +141,7 @@
         .details {
             text-align: central;
             background: #857eb9;
-            font-family: Papyrus;
+            font-family: sans-serif;
             color: rgb(5, 6, 5);
             font-size: 25px;
         }
@@ -153,7 +153,7 @@
         
         .div_item h2 {
             font-size: large;
-            font-family: Copperplate;
+            font-family: sans-serif;
         }
         
         .div_item p {
